# agent-os-cli

./: .gitignore  CHANGELOG.md  CONFIGS.md  CONTRIBUTING.md  DEV.md  Makefile  README.md  SETUP.md  config.yml  coverage.xml  pyproject.toml
.claude/agents/: code-reviewer.md
.cursor/rules/: code-reviewer.mdc
.github/workflows/: main.yml  pull-request.yml  test-publish.yml
instructions/core/: plan-product.md
setup/: base.sh  functions.sh
specs/: cli-implementation-spec.md  tasks.md
src/agent_os_cli/: __init__.py  types.py
src/agent_os_cli/core/: __init__.py  config.py  installer.py  shell.py
src/agent_os_cli/utils/: __init__.py
src/agentos/: __init__.py  cli.py  settings.py  types.py
src/agentos/core/: config.py  installer.py  shell.py
src/agentos/utils/: validation.py
tests/: __init__.py  conftest.py  test_bash_script_compatibility.py  test_cli.py  test_config.py  test_installer.py  test_integration.py  test_shell.py  test_types.py
